--- a/Frech_to_English_NMT_without_pretrained_embedding.ipynb
+++ b/Frech_to_English_NMT_without_pretrained_embedding.ipynb
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/krishnarevi/TSAI_END2.0_Session10/blob/main/Frech_to_English_NMT_without_pretrained_embedding.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/krishnarevi/Neural_Machine_Translation_with_Pretrained_Embeddings/blob/main/Frech_to_English_NMT_without_pretrained_embedding.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -34,8 +34,7 @@
         "id": "8dGsqrd3f9C9"
       },
       "source": [
-        "## English to French translation\n",
-        "In the original blog in Pytorch website , they've shown French to English model but here we will be showcasing English to French translation in similar manner"
+        "## English to French translation\n"
       ]
     },
     {
@@ -48,62 +47,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "qsNz8tab8vv9"
-      },
-      "source": [
-        "\n",
-        "NLP From Scratch: Translation with a Sequence to Sequence Network and Attention\n",
-        "*******************************************************************************\n",
-        "**Author**: `Sean Robertson <https://github.com/spro/practical-pytorch>`_\n",
-        "[PyTorch Source](https://pytorch.org/tutorials/intermediate/seq2seq_translation_tutorial.html)\n",
-        "\n",
-        "This is the third and final tutorial on doing \"NLP From Scratch\", where we\n",
-        "write our own classes and functions to preprocess the data to do our NLP\n",
-        "modeling tasks. We hope after you complete this tutorial that you'll proceed to\n",
-        "learn how `torchtext` can handle much of this preprocessing for you in the\n",
-        "three tutorials immediately following this one.\n",
-        "\n",
-        "In this project we will be teaching a neural network to translate from\n",
-        "English to French.\n",
-        "\n",
-        "\n",
-        "This is made possible by the simple but powerful idea of the [sequence to sequence network](https://arxiv.org/abs/1409.3215), in which two\n",
-        "recurrent neural networks work together to transform one sequence to\n",
-        "another. An encoder network condenses an input sequence into a vector,\n",
-        "and a decoder network unfolds that vector into a new sequence.\n",
-        "\n",
-        "To improve upon this model we'll use an [attention\n",
-        "mechanism](https://arxiv.org/abs/1409.0473), which lets the decoder\n",
-        "learn to focus over a specific range of the input sequence.\n",
-        "\n",
-        "**Recommended Reading:**\n",
-        "\n",
-        "I assume you have at least installed PyTorch, know Python, and\n",
-        "understand Tensors:\n",
-        "\n",
-        "-  https://pytorch.org/ For installation instructions\n",
-        "-  [Deep Learning with PyTorch](https://pytorch.org/tutorials/beginner/deep_learning_60min_blitz.html): A 60 Minute Blitz to get started with PyTorch in general\n",
-        "-  [Learning PyTorch with Examples](https://pytorch.org/tutorials/beginner/pytorch_with_examples.html) for a wide and deep overview\n",
-        "\n",
-        "\n",
-        "It would also be useful to know about Sequence to Sequence networks and\n",
-        "how they work:\n",
-        "\n",
-        "-  [Learning Phrase Representations using RNN Encoder-Decoder for Statistical Machine Translation](https://arxiv.org/abs/1406.1078)\n",
-        "-  [Sequence to Sequence Learning with Neural Networks](https://arxiv.org/abs/1409.3215)\n",
-        "-  [Neural Machine Translation by Jointly Learning to Align and Translate](https://arxiv.org/abs/1409.0473)\n",
-        "-  [A Neural Conversational Model](https://arxiv.org/abs/1506.05869)\n",
-        "\n",
-        "\n",
-        "\n",
-        "![Image](https://pytorch.org/tutorials/_images/seq2seq.png)\n",
-        "\n",
-        "**Requirements**"
-      ]
     },
     {
       "cell_type": "code",
